--- a/package.json
+++ b/package.json
@@ -2,10 +2,17 @@
   "name": "ra-hw-3_props_1-2-3",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://igor-chazov.github.io/ra-hw-3_props_1-2-3",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.3.0-beta3",
+    "@fortawesome/free-regular-svg-icons": "^6.0.0-beta3",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0-beta3",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "nanoid": "^3.1.30",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
